[package]
name = "detect-range"
version = "0.1.0"
edition = "2024"
authors = ["Rich Davs"]
description = "Radar Detection line-of-sight calculator (Utilising effective Earth radius / k-factor model)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rich-davs/detect-range"
readme = "README.md"


[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
incremental = false
